Fix text alignment for menu dropdown list item

--- a/static/css/yui-yahoo.css
+++ b/static/css/yui-yahoo.css
@@ -74,9 +74,9 @@ pre,code,kbd,samp,tt {
     font-family: monospace;*font-size:108%;
     line-height: 100%;
 }
-body {
-    text-align: center;
-}
+/* body { */
+/*     text-align: center; */
+/* } */
 #doc,#doc2,#doc3,#doc4,.yui-t1,.yui-t2,.yui-t3,.yui-t4,.yui-t5,.yui-t6,.yui-t7 {
     margin: auto;
     text-align: left;
